many, many styling, image, and copy updates

--- a/projects/autoloantools.html
+++ b/projects/autoloantools.html
@@ -84,6 +84,10 @@
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center autoloantools-image-container-1">
+                        <h2 class="mb-3 col-12 text-center project-title">Auto Account Servicing</h2>
+                        <p class="col-10 text-center mt-0 mb-3">
+                            Homepage account tile design and account details view with Auto Loan Tracker feature.
+                        </p>
                         <div class="col-6 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/autoloantools-alt1.png">
                         </div>
@@ -91,30 +95,29 @@
                             <img class="col-12" src="/images/project-images/autoloantools-alt2.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Homepage account tile design and account details view with Auto Loan Tracker feature.
-                    </p>
-                    <div class="row py-5 mb-3 d-flex justify-content-center context-box">
-                        <div class="col-12 col-md-10 d-flex flex-column">
-                            <img class="col-12" src="/images/project-images/autoloantools-alt3.png">
+                    <div class="row py-5 mb-3 d-flex justify-content-center autoloantools-image-container-1">
+                        <h2 class="mb-3 col-12 text-center project-title">Auto Loan Tracker States</h2>
+                        <p class="col-10 text-center mt-0 mb-4">
+                            Possible Auto Loan Tracker states including New Loan,
+                            Default, Early
+                            Payoff
+                            Projected, Extra
+                            Due at Payoff, Paid Off, Paid Off Early, and Extra Due.
+                        </p>
+                        <div class="col-12 col-md-11 d-flex flex-column context-box">
+                            <img class="col-12 p-5" src="/images/project-images/autoloantools-alt3.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Possible Auto Loan Tracker states including New Loan,
-                        Default, Early
-                        Payoff
-                        Projected, Extra
-                        Due at Payoff, Paid Off, Paid Off Early, and Extra Due.
-                    </p>
-                    <div class="row py-5 mb-3 d-flex justify-content-center autoloantools-image-container-1">
+                    <div class="row py-5 mb-5 d-flex justify-content-center autoloantools-image-container-1">
+                        <h2 class="mb-3 col-12 text-center project-title">Loan Tracker Details</h2>
+                        <p class="col-10 text-center mt-0 mb-3">
+                            Possible Auto Loan Tracker detail states including Default, Early Payoff Projected, and
+                            Additional Balance Projected.
+                        </p>
                         <img class="col-8 col-md-4" src="/images/project-images/autoloantools-alt4.png">
                         <img class="col-8 col-md-4" src="/images/project-images/autoloantools-alt5.png">
                         <img class="col-8 col-md-4" src="/images/project-images/autoloantools-alt6.png">
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Possible Auto Loan Tracker detail states including Default, Early Payoff Projected, and
-                        Additional Balance Projected.
-                    </p>
                     <hr class="my-5">
                     <div class="row mt-2 mb-5">
                         <h2 class="my-4 project-title">Get Current</h2>
@@ -175,6 +178,13 @@
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center autoloantools-image-container-2">
+                        <h2 class="mb-3 col-12 text-center project-title">Past Due Account Status</h2>
+                        <p class="col-10 text-center mt-0 mb-3">
+                            Customer is informed at the highest accout level of the status of the account and the
+                            information that options are available. They are then presented with a detailed status view
+                            with
+                            multiple payment options to help them get back on track.
+                        </p>
                         <div class="col-6 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/autoloantools-gc1.png">
                         </div>
@@ -182,12 +192,15 @@
                             <img class="col-12" src="/images/project-images/autoloantools-gc2.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Customer is informed at the highest accout level of the status of the account and the
-                        information that options are available. They are then presented with a detailed status view with
-                        mulitple payment options to help them with their repayment.
-                    </p>
-                    <div class="row py-5 mb-3 d-flex justify-content-center autoloantools-image-container-2">
+                    <div class="row py-5 mb-5 d-flex justify-content-center autoloantools-image-container-2">
+                        <h2 class="mb-3 col-12 text-center project-title">Creating A Payment Plan</h2>
+                        <p class="col-10 text-center mt-0 mb-3">
+                            After the user confirms the can make a payment that day, they then plan out the rest of
+                            their
+                            payments. The next step is to confirm a payment account and submit the plan. Additional
+                            context
+                            is provided to help inform customers as they progress.
+                        </p>
                         <div class="col-6 col-md-6 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/autoloantools-gc3.png">
                         </div>
@@ -195,11 +208,6 @@
                             <img class="col-12" src="/images/project-images/autoloantools-gc4.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Once the user confirms the can make a payment that day they then plan out the rest of their
-                        payments. The next step is to confirm a payment account and submit the plan. Additional context
-                        is provided to help inform customers as they progress.
-                    </p>
                     <div class="row mb-5">
                         <h2 class="modal-subhead">Results</h2>
                         <div class="col-12">
