--- a/projects/connectingflight.html
+++ b/projects/connectingflight.html
@@ -78,6 +78,10 @@
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center connectingflight-image-container-1">
+                        <h2 class="mb-3 col-12 text-center project-title text-white">In-Flight Homepage Design</h2>
+                        <p class="col-10 text-center mt-0 mb-4 text-white">
+                            Homepage outlines pricing for connectivity packages and direct entertainment purchases.
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/connectingflight1.png">
                         </div>
@@ -85,10 +89,13 @@
                             <img class="col-12" src="/images/project-images/connectingflight2.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Homepage outlines pricing for connectivity packages and direct entertainment purchases.
-                    </p>
                     <div class="row py-5 mb-3 d-flex justify-content-center connectingflight-image-container-2">
+                        <h2 class="mb-3 col-12 text-center project-title text-white">Add Movie Interaction</h2>
+                        <p class="col-10 text-center mt-0 mb-4 text-white">
+                            Movies are added or dragged to flight timeline which fills time-based visual space and
+                            allows
+                            customers to maximize entertainment selection based on the duration of the flight.
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/connectingflight3.png">
                         </div>
@@ -96,37 +103,37 @@
                             <img class="col-12" src="/images/project-images/connectingflight4.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Movies are added or dragged to flight timeline which fills time-based visual space and allows
-                        customers to maximize entertainment selection.
-                    </p>
                     <div class="row py-5 mb-3 d-flex justify-content-center connectingflight-image-container-2">
+                        <h2 class="mb-3 col-12 text-center project-title text-white">Media Center Design</h2>
+                        <p class="col-10 text-center mt-0 mb-4 text-white">
+                            Media center provides access to purchased content and additional entertainment options.
+                        </p>
                         <div class="col-12 col-md-10 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/connectingflight5.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Media center provides access to purchased movies and additional entertainment options.
-                    </p>
                     <div class="row py-5 mb-3 d-flex justify-content-center connectingflight-image-container-2">
-                        <div class="col-12 col-md-10 d-flex flex-column">
+                        <h2 class="mb-3 col-12 text-center project-title text-white">Quick Acces Flight Tracker</h2>
+                        <p class="col-10 text-center mt-0 mb-4 text-white">
+                            User taps play screen at any time to see flight tracker and destination weather info.
+                        </p>
+                        <div class="col-12 col-md-6 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/connectingflight6a.png">
                         </div>
-                        <div class="col-12 col-md-10 d-flex flex-column">
+                        <div class="col-12 col-md-6 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/connectingflight6b.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        User taps play screen at any time to see flight tracker and destination weather info.
-                    </p>
                     <div class="row py-5 mb-3 d-flex justify-content-center connectingflight-image-container-2">
+                        <h2 class="mb-3 col-12 text-center project-title text-white">Smart Watch App Design</h2>
+                        <p class="col-10 text-center mt-0 mb-4 text-white">
+                            Companion watch app displays important information such as a flight tracker and media
+                            controls.
+                        </p>
                         <div class="col-12 col-md-10 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/connectingflight7.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Companion watch app displays important information such as a flight tracker and media controls.
-                    </p>
                 </div>
             </div>
             <div class="modal-footer">
