--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -74,73 +74,15 @@
                             implemented on shortened delivery timelines with our mobile engineering team.
                         </div>
                     </div>
-                    <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
-                        <div class="col-6 col-md-4 d-flex flex-column">
-                            <div class="col-10 text-center align-self-center context-box">
-                                <h2>Before</h2>
-                            </div>
-                            <img class="col-12" src="/images/project-images/shopping-before.png">
-                        </div>
-                        <div class="col-6 col-md-4 d-flex flex-column">
-                            <div class="col-10 text-center align-self-center context-box">
-                                <h2>After</h2>
-                            </div>
-                            <img class="col-12" src="/images/project-images/shopping-after.png">
-                        </div>
-                        <div class="col-12 d-flex flex-row justify-content-center my-3">
-                            <div class="context-box col-6 col-md-4 d-flex flex-column mx-3">
-                                <h2 class="col-12">Opportunities</h2>
-                                <ul>
-                                    <li>
-                                        Generic content and offers meant all customers would see the same experience
-                                        regardless of preferences or shopping habits.
-                                    </li>
-                                    <li>
-                                        Accessibility issues such as a low contrast color palette and missing field
-                                        labels
-                                        prevented users with color blindness and cognitive impairments from using the
-                                        app.
-                                    </li>
-                                    <li>
-                                        After a series of contextual interviews, we discovered broken or missing core
-                                        features such as reliable product and store search and base-level account
-                                        management
-                                        which caused customers to lose confidence in the shopping service.
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="context-box col-6 col-md-4 d-flex flex-column mx-3">
-                                <h2 class="col-12">Highlights</h2>
-                                <ul>
-                                    <li>
-                                        Designed and released a new tile-based content format enabling customers to
-                                        browse
-                                        content more easily.
-                                    </li>
-                                    <li>
-                                        Prioritized personalized offers, deals, and tiles to make the experience more
-                                        tailored to the customer’s shopping preferences while also including a layer of
-                                        discoverability though features like “Similar Stores” and related product
-                                        suggestions.
-                                    </li>
-                                    <li>
-                                        Fixed accessibility issues and improved usability allowing customers with color
-                                        blindness and cognitive impairments to successfully use the experience.
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                     <div class="row mb-5">
                         <h2 class="modal-subhead">Solution</h2>
                         <div class="col-12">
                             <p>
-
-                                After conducting a series of qualitative interviews with our customers, analyzing app
+                                After conducting a series of interviews with our customers, analyzing app
                                 usage,
                                 and examining performance data we identified the largest pain points and opportunities
                                 to
-                                improve the experience. We then redesigned a series of core flows within the app
+                                improve the overall experience. We then redesigned a set of core flows within the app
                                 including a
                                 completely new personalized home page, improved search experience, new onboarding flow
                                 with
@@ -156,75 +98,127 @@
                         </div>
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Homepage Redesign</h2>
+                        <div class="col-6 col-lg-4 d-flex flex-column">
+                            <h2 class="col-12 text-center mt-0 mb-0">
+                                Before
+                            </h2>
+                            <img class="col-12" src="/images/project-images/shopping-before.png">
+                        </div>
+                        <div class="col-6 col-lg-4 d-flex flex-column">
+                            <h2 class="col-12 text-center mt-0 mb-0">
+                                After
+                            </h2>
+                            <img class="col-12" src="/images/project-images/shopping-after.png">
+                        </div>
+                        <div class="col-12 d-flex flex-column flex-md-row justify-content-center my-3">
+                            <div class="col-12 col-md-6 d-flex flex-column px-5">
+                                <h2>Opportunities</h2>
+                                <ul>
+                                    <li class="mb-2">
+                                        Generic content and offers meant all customers would see the same experience
+                                        regardless of preferences or shopping habits.
+                                    </li>
+                                    <li class="mb-2">
+                                        Accessibility issues such as a low contrast color palette and missing field
+                                        labels
+                                        prevented users with color blindness and cognitive impairments from using the
+                                        app.
+                                    </li>
+                                    <li class="mb-2">
+                                        After a series of contextual interviews, we discovered broken or missing core
+                                        features such as reliable product and store search and base-level account
+                                        management
+                                        which caused customers to lose confidence in this shopping app.
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-12 col-md-6 d-flex flex-column px-5">
+                                <h2>Highlights</h2>
+                                <ul>
+                                    <li class="mb-2">
+                                        Designed and released a new tile-based content format enabling customers to
+                                        browse
+                                        content more easily.
+                                    </li>
+                                    <li class="mb-2">
+                                        Prioritized personalized offers, deals, and tiles to make the experience more
+                                        tailored to the customer’s shopping preferences while also including a layer of
+                                        discoverability though features like “Similar Stores” and related product
+                                        suggestions.
+                                    </li>
+                                    <li class="mb-2">
+                                        Fixed accessibility issues and improved usability allowing customers with color
+                                        blindness and cognitive impairments to successfully navigate the experience.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Homepage Tile Concepts</h2>
+                        <p class="col-10 text-center mt-0 mb-3">
+                            My team and I created over 60 unique homepage tile concepts across 5 main product
+                            requirements.
+                        </p>
                         <img class="col-10" src="/images/project-images/shopping-hpconcepts.png">
-                        <div class="col-10 mt-4 pb-3 align-self-center context-box">
-                            <ul>
-                                <li>
-                                    My team created over 60 unique homepage tile concepts across 5 main product
-                                    requirements.
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Rebrand Guidelines</h2>
+                        <p class="col-10 text-center mt-0 mb-3">
+                            I developed brand migration guidelines to be used by multiple development,
+                            marketing,
+                            and agency teams during the rebrand of the Wikibuy platform to Capital One Shopping.
+                        </p>
                         <img class="col-10" src="/images/project-images/shopping-brand.png">
-                        <div class="col-10 mt-4 pb-3 align-self-center context-box">
-                            <ul>
-                                <li>
-                                    We developed brand migration guidelines to be used by multiple development,
-                                    marketing,
-                                    and agency teams.
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">In-App Shopping Experience</h2>
+                        <p class="col-10 text-center mt-0 mb-3">
+                            My team and I designed a new custom webview shopping experience that kept users within the
+                            app
+                            in order to provide additional tools while they shopped, helping them save money and
+                            find
+                            the best deals.
+                        </p>
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-webview1.png">
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-webview2.png">
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-webview3.png">
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-webview4.png">
-                        <div class="col-10 mt-2 pb-3 align-self-center context-box">
-                            <ul>
-                                <li>
-                                    My team designed a new custom webview shopping experience that kept users within the
-                                    app
-                                    in order to provide additional tools while they shop, helping them save money and
-                                    find
-                                    the best deals.
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Automatic Coupons At Checkout</h2>
+                        <p class="col-10 text-center mt-0 mb-3">
+                            One of the primary benefits of building out the in-app webview for shopping trips is that we
+                            can programatically
+                            access
+                            the page content and perform tasks on behalf of the user including checking prices
+                            while
+                            they shop and automatically applying coupon codes during checkout.
+                        </p>
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout1.png">
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout2.png">
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout3.png">
                         <img class="col-6 col-md-3" src="/images/project-images/shopping-checkout4.png">
-                        <div class="col-10 mt-2 pb-3 align-self-center context-box">
-                            <ul>
-                                <li>
-                                    One of the primary benefits of the in-app webview is that we can programatically
-                                    access
-                                    the page content and perform tasks on behalf of the user including checking prices
-                                    while
-                                    they shop and automatically trying coupon codes during checkout.
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                     <div class="row mb-5">
                         <h2 class="modal-subhead">Results</h2>
                         <div class="col-12">
                             <ul>
-                                <li>Our new homepage design led to a 25% increase in purchases
+                                <li class="mb-2">Our new homepage design led to a 25% increase in purchases
                                     year-over-year over the previous design.
                                 </li>
-                                <li>The redesigned price comparison experience increased purchases by around
+                                <li class="mb-2">The redesigned price comparison experience increased purchases by
+                                    around
                                     40%
                                     year-over-year.</li>
-                                <li>App store rating increases from 3.3 to 4.7 stars</li>
-                                <li>Successfully rebranded from Wikibuy to the new Capital One
-                                    Shopping brand in time for a <a
+                                <li class="mb-2">The app store rating increased from 3.3 stars before the redesign to
+                                    4.7 stars after
+                                    core experience enhancements were completed.</li>
+                                <li class="mb-2">We successfully rebranded from Wikibuy to the new <a
+                                        href="https://www.capitalone.com/learn-grow/money-management/capital-one-shopping/"
+                                        target="_blank" rel="noopener noreferrer">Capital One
+                                        Shopping</a> brand in time for a <a
                                         href="https://www.ispot.tv/ad/tfd8/capital-one-shopping-holiday-late-night-feat-samuel-l-jackson-john-travolta"
                                         target="_blank" rel="noopener noreferrer">national advertising launch in
                                         Fall 2020</a>.
