--- a/projects/skylanders3Dadventure.html
+++ b/projects/skylanders3Dadventure.html
@@ -93,6 +93,12 @@
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center skylanders-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Splash and Landing Page Design</h2>
+                        <p class="col-10 text-center mt-0 mb-4">
+                            Splash screen sets the stage for the experience and the landing screen explains how to
+                            interact
+                            with the in-store displays.
+                        </p>
                         <div class="col-6 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure1.png">
                         </div>
@@ -100,11 +106,13 @@
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure2.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Splash screen sets the stage for the experience and the landing screen explains how to interact
-                        with the in-store displays.
-                    </p>
                     <div class="row py-5 mb-3 d-flex justify-content-center skylanders-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Display Scanner and Coupon Page Design</h2>
+                        <p class="col-10 text-center mt-0 mb-4">
+                            Using the app enables characters from the game to appear in 3D. Once the user captures an
+                            image
+                            a coupon is awarded.
+                        </p>
                         <div class="col-6 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure3.png">
                         </div>
@@ -112,33 +120,32 @@
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure4.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Using the app enables characters from the game to appear in 3D. Once the user captures an image
-                        a coupon is awarded.
-                    </p>
                     <div class="row pt-5 mb-3 d-flex justify-content-center skylanders-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">In-Store Display Designs</h2>
+                        <p class="col-10 text-center mt-0 mb-4">
+                            I designed a series of interactive in-store displays with directions, scan indicators, and
+                            promotional products.
+                        </p>
                         <div class="col-10 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure5.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Interactive in-store display with directions, scan indicator, and promotional products.
-                    </p>
-
-                    <div class="row pt-5 mb-3 d-flex justify-content-center skylanders-image-container">
+                    <div class="row pt-5 mb-5 d-flex justify-content-center skylanders-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Take Home Interactive Packaging</h2>
+                        <p class="col-10 text-center mt-0 mb-4">
+                            We also created interactive packaging for customers to purchase, scan, and recreate the
+                            experience at home.
+                        </p>
                         <div class="col-10 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure6.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Interactive packaging for customers to take home, scan, and recreate the experience.
-                    </p>
                     <div class="row mb-5">
                         <h2 class="modal-subhead">Resuts</h2>
                         <div class="col-12">
                             <ul>
                                 <li class="mb-3">
-                                    5,000 displays ordered
+                                    Over 5,000 displays ordered
                                 </li>
                                 <li class="mb-3">
                                     Over 17M active users and 53M pictures taken through app experience
