--- a/projects/visualdesign.html
+++ b/projects/visualdesign.html
@@ -46,7 +46,7 @@
                             Servicing Experience at the Capital One corporate offices across the US. The theme was
                             intended to
                             follow a
-                            larger tech "transformation" initiative happening within the company.
+                            larger tech “transformation” initiative happening within the company.
                         </p>
                         <div class="col-12 col-lg-6 px-1 mb-2 d-flex justify-content-center align-items-center">
                             <div class="col-6 d-flex flex-column px-1 px-lg-3">
@@ -75,20 +75,20 @@
                             and
                             creative competition.
                         </p>
-                        <div class="col-12 mb-3 d-flex justify-content-center">
-                            <div class="col-12 col-md-10 d-flex flex-column">
-                                <img class="col-12 px-2" src="/images/project-images/visualdesign/design-rumble1.png">
+                        <div class="col-12 col-md-10 d-flex mb-2 image-shadow no-gutters">
+                            <div class="img-fluid">
+                                <img class="col-12" src="/images/project-images/visualdesign/design-rumble1.png">
                             </div>
                         </div>
-                        <div class="col-12 col-md-10 mb-3 d-flex justify-content-center">
-                            <div class="d-flex flex-column">
-                                <img class="col-12 px-2" src="/images/project-images/visualdesign/design-rumble3.png">
+                        <div class="col-12 col-md-10 d-flex image-shadow no-gutters">
+                            <div class="img-fluid">
+                                <img class="w-100" src="/images/project-images/visualdesign/design-rumble3.png">
                             </div>
-                            <div class="d-flex flex-column">
-                                <img class="col-12 px-2" src="/images/project-images/visualdesign/design-rumble4.png">
+                            <div class="img-fluid">
+                                <img class="w-100" src="/images/project-images/visualdesign/design-rumble4.png">
                             </div>
-                            <div class="d-flex flex-column">
-                                <img class="col-12 px-2" src="/images/project-images/visualdesign/design-rumble2.png">
+                            <div class="img-fluid">
+                                <img class="w-100" src="/images/project-images/visualdesign/design-rumble2.png">
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,8 @@
                         <h2 class="mb-3 col-12 text-center project-title">Doritos Displays and Products</h2>
                         <p class="col-12 text-center mt-0 mb-0">
                             Concepted and designed in-store displays for the Doritos brand. The requirements for this
-                            display design were for it to be based on the idea of a vending machine and be something
+                            particular
+                            display were for the design to be based on the idea of a vending machine and be something
                             that’s
                             revolutionary or never-been-done-before.
                         </p>
@@ -191,7 +192,7 @@
                         <h2 class="mb-3 col-12 text-center project-title">Lay’s In-Store Displays</h2>
                         <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed themed in-store product displays for the Lay’s brand. These concepts
-                            were inspired by a corner market or convenience store and a festival or concert.
+                            were inspired by a corner market or convenience store and a music festival.
                         </p>
                         <div class="col-12 col-md-6 d-flex flex-column">
                             <img class="image-shadow" src="/images/project-images/visualdesign/lays-display2.png">
@@ -208,7 +209,7 @@
                             Yes, a mullet. Glorious.
                         </p>
                         <div class="col-12 col-md-8 mb-3 d-flex justify-content-center">
-                            <img class="col-12" src="/images/project-images/visualdesign/ART-logo.png">
+                            <img class="col-12 image-shadow" src="/images/project-images/visualdesign/ART-logo.png">
                         </div>
                     </div>
                 </div>
