--- a/projects/generatormakerspace.html
+++ b/projects/generatormakerspace.html
@@ -49,7 +49,7 @@
                             top score and ultimate bragging rights.
                         </div>
                     </div>
-                    <div class="row mb-5">
+                    <div class="row mb-3">
                         <h2 class="modal-subhead">My Role</h2>
                         <div class="col-4">
                             <ul>
@@ -60,10 +60,22 @@
                         </div>
                         <div class="col-8">
                             I designed branding for the space and an end-to-end companion app experience including the
-                            core user experience, UI design, and interactive game.
+                            core user experience, UI/UX design, and interactive game.
                         </div>
                     </div>
-                    <div class="row py-3 py-md-5 d-flex justify-content-center generator-image-container4">
+                    <div class="row py-3 d-flex justify-content-center generator-image-container4">
+                        <h2 class="mb-3 col-12 text-center project-title">Primary Logo</h2>
+                        <div class="col-12 col-md-8 d-flex flex-column">
+                            <img class="col-12" src="/images/project-images/generator3.png">
+                        </div>
+                    </div>
+                    <div class="row py-3 py-md-5 mb-5 d-flex justify-content-center generator-image-container4">
+                        <h2 class="mb-3 col-12 text-center project-title">Label-Inspired Logo Lockup</h2>
+                        <p class="col-12 col-md-8 text-center mt-0 mb-4">
+                            Inspiration for branding included vintage machine labels and mechanical drawings, alluding
+                            to
+                            the process of innovation and creating products by hand.
+                        </p>
                         <div class="col-12 col-md-8 d-flex flex-column">
                             <img class="col-12 round-corners" src="/images/project-images/generator1.png">
                         </div>
@@ -71,19 +83,14 @@
                             <img class="col-12 round-corners" src="/images/project-images/generator2.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Inspiration for branding included vintage machine labels and mechanical drawings, alluding to
-                        the process of innovation and creating products by hand.
-                    </p>
-                    <div class="row py-3 d-flex justify-content-center generator-image-container4">
-                        <div class="col-12 col-md-8 d-flex flex-column">
-                            <img class="col-12" src="/images/project-images/generator3.png">
-                        </div>
-                    </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Primary logo
-                    </p>
                     <div class="row py-5 mb-3 d-flex justify-content-center generator-image-container1">
+                        <h2 class="mb-3 col-12 text-center project-title text-off-white1">Splash and Login Page Designs
+                        </h2>
+                        <p class="col-10 text-center mt-0 mb-4 text-off-white2">
+                            Splash and login page with custom keyboard. A Circuit Breaker game is launched as an
+                            easter
+                            egg when the user taps on the Generator logo.
+                        </p>
                         <div class="col-8 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator4.png">
                         </div>
@@ -94,11 +101,13 @@
                             <img class="col-12" src="/images/project-images/generator6.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Splash screen and login with custom keyboard. The Circuit Breaker game is launched as an easter
-                        egg when the user taps on the Generator logo.
-                    </p>
                     <div class="row py-5 mb-3 d-flex justify-content-center generator-image-container2">
+                        <h2 class="mb-3 col-12 text-center project-title text-off-white1">Home and Tools Page Designs
+                        </h2>
+                        <p class="col-10 text-center mt-0 mb-4 text-off-white2">
+                            Homepage with quick access to content like featured works, a shared schedule, suggested
+                            projects, and available tools and materials.
+                        </p>
                         <div class="col-8 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator7.png">
                         </div>
@@ -106,11 +115,12 @@
                             <img class="col-12" src="/images/project-images/generator8.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Homepage with quick access to content like featured works, a shared schedule, suggested
-                        projects, and available tools and supplies.
-                    </p>
                     <div class="row py-5 mb-3 d-flex justify-content-center generator-image-container3">
+                        <h2 class="mb-3 col-12 text-center project-title text-off-white1">Circuit Breaker Game Design
+                        </h2>
+                        <p class="col-10 text-center mt-0 mb-4 text-off-white2">
+                            Custom built Circuit Breaker game with high score tracking and a shared leaderboard.
+                        </p>
                         <div class="col-8 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator-circuitbreaker1.png">
                         </div>
@@ -121,8 +131,11 @@
                             <img class="col-12" src="/images/project-images/generator-circuitbreaker3.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Built in circuit breaker game with high score tracking and a shared leaderboard.
+                    <h2 class="mt-5 mb-3 col-12 text-center project-title">Additional Print Collateral
+                    </h2>
+                    <p class="col-12 text-center mt-0 mb-4">
+                        Principles handout provides information about the space and signage provides schedule for office
+                        hours.
                     </p>
                     <div class="row no-gutters mb-3 d-flex justify-content-center generator-image-container4">
                         <div class="col-12 col-md-6 no-gutters d-flex flex-column">
@@ -132,9 +145,6 @@
                             <img src="/images/project-images/generator-flyer2.png">
                         </div>
                     </div>
-                    <p class="col-12 text-center mt-0 mb-5">
-                        Principles handout and space signage.
-                    </p>
                 </div>
             </div>
             <div class="modal-footer">
