--- a/projects/monsterproject.html
+++ b/projects/monsterproject.html
@@ -61,6 +61,10 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Peprment</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            The “pestey”-eating monster who lives in “my backyard” and “paly socer.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MID-Addie-Abowd1.png">
@@ -103,6 +107,10 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Bob Larry Johnson</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            The “toilet paper”-eating monster who lives “in the bathroom.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Max-Abowd1.png">
@@ -114,6 +122,12 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Lily</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            The “meat”-eating monster who “livies in the forest” and “likes tu walk dog.” The special
+                            thing about Lily is
+                            “Lily is cute.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Gabriele-Abowd1.png">
@@ -125,6 +139,10 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Lydia</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            Lydia eats “donutes” and lives “in the wotte.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/TOR-Lillian-Abowd1.png">
@@ -136,6 +154,10 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Frite Meny</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            Likes to eat “pepoll” and lives (on) “Jooptre.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/WRI-Jack-Abowd1.png">
@@ -147,6 +169,11 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Lily</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            Lily eats “meat,” lives “in Colurolow,” and “she likes to swim becus it’s fun and also
+                            swiming is and also she likes to dive.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Zoe-Abowd1.png">
@@ -158,6 +185,10 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Jack</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            Jack likes to eat “freanch fries,” lives “in the woods,” and “likes to play hide and seek.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/DEL-Liliana-Abowd1.png">
@@ -169,6 +200,11 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Snootls</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            Snootls eats “toys,” lives in “space,” and likes to “fart fly snart.” Snootls is special
+                            because it “breths fiyre.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Sydney-Abowd1.png">
@@ -180,6 +216,12 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Nik</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            Nik likes to eat “bernt stak,” lives in “the clawds,” and likes to “make thunder.” Nik is
+                            special
+                            because his “bake horn is mad out of litning.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Jude-Abowd1.png">
@@ -191,6 +233,13 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Woor Laks</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            Woor Laks likes to eat “Poceemon,” lives in “Poceemon Go,” and likes to “sleep.”
+                            Woor Laks is
+                            special
+                            because “he is a soomowe resulr.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/FAR-Owen-Abowd1.png">
@@ -202,17 +251,29 @@
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Dabrain</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            Dabrain likes to eat “Pirates,” lives in “the sea,” and it likes to “swim in the sea.”
+                            Dabrain is
+                            special
+                            because “it has long tentacles.”
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Joaquin-Abowd1.png">
                         </div>
-                        <div class="col-10 col-md-5 d-flex flex-column">
+                        <div class="col-10 col-md-6 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Joaquin-Abowd2.png">
                         </div>
                     </div>
                     <div
                         class="row py-3 py-md-5 mb-3 d-flex justify-content-center align-items-center monster-image-container">
+                        <h2 class="mb-3 col-12 text-center project-title">Star</h2>
+                        <p class="col-12 col-md-10 text-center mt-0 mb-4">
+                            Star likes to eat “fish,” lives in “a house,” and it likes to “play.”
+                            What is special about Star you ask? Why “her dog,” of course!
+                        </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
                             <img class="col-12 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Nicanor-Abowd1.png">
